Reduce heading spacing and fix bullet points

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -10,6 +10,8 @@ body {
     text-transform: uppercase;
     font-size: 5rem;
     color: $color-secondary;
+    line-height: 1.3;
+    margin-bottom: 2rem;
 
     & span {
         color: $color-primary;
