--- a/assets/scss/components/_experience.scss
+++ b/assets/scss/components/_experience.scss
@@ -12,16 +12,6 @@
         }
         margin-bottom: 10px;
         margin-top: 10px;
-
-        &::before {
-            content: "";
-            height: 90%;
-            width: 1.5px;
-            position: absolute;
-            background: linear-gradient($color-page-background, rgba(255, 255, 255, 0));
-            //background: linear-gradient(blue, red);
-            margin-top: 25px;
-        }
     }
 
     &__header,
@@ -85,8 +75,13 @@
     }
 
     &__bullet {
-        list-style: square inside;
-        margin-left: 1rem;
+        list-style: square outside;
+        margin-left: 2rem;
+    }
+
+    &__subbullet {
+        list-style: circle outside;
+        margin-left: 3rem;
     }
 
     &__badges {
